<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="questionId">Тут отображается вопрос</string>
    <string name="true_button">Правда</string>
    <string name="false_button">Ложь</string>
    <string name="cheat_text">Показать подсказку</string>
    <string name="next_button">Кнопка переключения на следующий вопрос</string>
    <string name="quiestion1">Вопрос 1</string>
    <string name="quiestion2">Вопрос 2</string>
    <string name="quiestion3">Вопрос 3</string>
    <string name="quiestion4">Вопрос 4</string>
    <string name="cheat_button">Подсказка</string>
    <string name="judgment_toast">Подсказки вредны</string>
    <string name="show_answer_button">Показать ответ</string>
    <string name="warning_text">Вы уверены, что хотите это сделать?</string>
    <string name="cnt_tips">Количество подсказок:</string>
</resources>
